--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailDomestic.cshtml
@@ -1418,7 +1418,7 @@
                         </div>
                         <div class="c-zebraList__item">
                             <div class="c-zebraList__title">定時定額</div>
-                            <div class="c-zebraList__content"><span class="t-bold">@BasicData.RegularInvestmentPlan.CheckNullOrEmptyString()</span></div>
+                            <div class="c-zebraList__content"><span class="t-bold">@BasicData.RegularInvestmentPlan.ConvertToChineseOrEmptyNA()</span></div>
                         </div>
 
                         <div class="c-zebraList__item">
@@ -1565,7 +1565,7 @@
                             <div class="c-zebraList__title">最低單筆投資金額(註2)</div>
                             <div class="c-zebraList__content">
                                 <span class="t-bold">
-                                    @BasicData.MinimumSingleInvestmentAmount.CheckNullOrEmptyString()
+                                    @BasicData.MinimumSingleInvestmentAmount.FormatCurrencyWithValue()
                                 </span>
                             </div>
                         </div>
@@ -1573,7 +1573,7 @@
                             <div class="c-zebraList__title">最低定期定額<br>投資金額(註2)</div>
                             <div class="c-zebraList__content">
                                 <span class="t-bold">
-                                    @BasicData.MinimumRegularInvestmentAmount.CheckNullOrEmptyString()
+                                    @BasicData.MinimumRegularInvestmentAmount.FormatCurrencyWithValue()
                                 </span>
                             </div>
                         </div>
@@ -1581,7 +1581,7 @@
                             <div class="c-zebraList__title">最低定期不定額投資金額</div>
                             <div class="c-zebraList__content">
                                 <span class="t-bold">
-                                    @BasicData.MinimumIrregularInvestmentAmount.CheckNullOrEmptyString()
+                                    @BasicData.MinimumIrregularInvestmentAmount.FormatCurrencyWithValue()
                                 </span>
                             </div>
                         </div>
