--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FundDetail/FundDetailOverseas.cshtml
@@ -1611,7 +1611,7 @@
                             <div class="c-zebraList__title">最低單筆投資金額(註2)</div>
                             <div class="c-zebraList__content">
                                 <span class="t-bold">
-                                    @BasicData.MinimumSingleInvestmentAmount.CheckNullOrEmptyString()
+                                    @BasicData.MinimumSingleInvestmentAmount.FormatCurrencyWithValue()
                                 </span>
                             </div>
                         </div>
@@ -1619,7 +1619,7 @@
                             <div class="c-zebraList__title">最低定期定額<br>投資金額(註2)</div>
                             <div class="c-zebraList__content">
                                 <span class="t-bold">
-                                    @BasicData.MinimumRegularInvestmentAmount.CheckNullOrEmptyString()
+                                    @BasicData.MinimumRegularInvestmentAmount.FormatCurrencyWithValue()
                                 </span>
                             </div>
                         </div>
@@ -1627,7 +1627,7 @@
                             <div class="c-zebraList__title">最低定期不定額投資金額</div>
                             <div class="c-zebraList__content">
                                 <span class="t-bold">
-                                    @BasicData.MinimumIrregularInvestmentAmount.CheckNullOrEmptyString()
+                                    @BasicData.MinimumIrregularInvestmentAmount.FormatCurrencyWithValue()
                                 </span>
                             </div>
                         </div>
